# sentiment-classification-api

./: .env  README.md  docker-compose.yaml  pyproject.toml  run.sh
src/app/: __init__.py
src/app/core/: config.py  logging.py  model.py  sentiment_service.py
src/app/entrypoints/: cli.py
src/app/web/http/: config.py  dependencies.py  logging.py  model.py  server.py
src/app/web/http/routes/: __init__.py  sentiment.py
